--- a/pom.xml
+++ b/pom.xml
@@ -8,23 +8,51 @@
     <artifactId>vinerator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <nd4j.backend>nd4j-native-platform</nd4j.backend>
+        <java.version>1.8</java.version>
+        <nd4j.version>1.0.0-beta2</nd4j.version>
+        <dl4j.version>1.0.0-beta2</dl4j.version>
+        <datavec.version>1.0.0-beta2</datavec.version>
+        <arbiter.version>1.0.0-beta2</arbiter.version>
+        <rl4j.version>1.0.0-beta2</rl4j.version>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.deeplearning4j</groupId>
-                <artifactId>deeplearning4j</artifactId>
-                <version>1.0.0-beta2</version>
-            </dependency>
-            <dependency>
                 <groupId>org.nd4j</groupId>
-                <artifactId>nd4j</artifactId>
-                <version>1.0.0-beta2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.datavec</groupId>
-                <artifactId>datavec-api</artifactId>
-                <version>1.0.0-beta2</version>
+                <artifactId>nd4j-native-platform</artifactId>
+                <version>${nd4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <!-- ND4J backend. You need one in every DL4J project. Normally define artifactId as either "nd4j-native-platform" or "nd4j-cuda-9.2-platform" -->
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>${nd4j.backend}</artifactId>
+            <version>${nd4j.version}</version>
+        </dependency>
+
+        <!-- Core DL4J functionality -->
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-core</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-nlp</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-zoo</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+    </dependencies>
 </project>
