--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <datavec.version>1.0.0-beta2</datavec.version>
         <arbiter.version>1.0.0-beta2</arbiter.version>
         <rl4j.version>1.0.0-beta2</rl4j.version>
+        <datavec.spark.version>1.0.0-beta2_spark_2</datavec.spark.version>
+        <scala.binary.version>2.11</scala.binary.version>
     </properties>
 
     <dependencyManagement>
@@ -24,6 +26,7 @@
                 <groupId>org.nd4j</groupId>
                 <artifactId>nd4j-native-platform</artifactId>
                 <version>${nd4j.version}</version>
+                <classifier></classifier>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -54,5 +57,37 @@
             <artifactId>deeplearning4j-zoo</artifactId>
             <version>${dl4j.version}</version>
         </dependency>
+
+        <!-- DataVec Dependencies -->
+        <dependency>
+            <groupId>org.datavec</groupId>
+            <artifactId>datavec-api</artifactId>
+            <version>${datavec.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.datavec</groupId>
+            <artifactId>datavec-spark_${scala.binary.version}</artifactId>
+            <version>${datavec.spark.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.datavec</groupId>
+            <artifactId>datavec-local</artifactId>
+            <version>${datavec.version}</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
